[package]
name = "tex_tmpl_rs"
version = "0.1.3"
description = "Render a LaTeX & Handlebars template into PDF"
authors = ["Andrej Dundovic <andrej@dundovic.com.hr>"]
repository = "https://github.com/adundovi/tex_tmpl_rs/"
license = "MIT"
readme = "README.md"
keywords = ["latex", "pdf", "template"]
categories = ["template-engine"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
handlebars = "4.5"
tectonic = { git = "https://github.com/tectonic-typesetting/tectonic.git" }

[dev-dependencies]
tempfile = "3.2"
